# MedPlot

./: .dockerignore  .env.example  .gitignore  DEV_SPEC.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
config/prompts/: case_generation.txt  image_captioning.txt  medical_knowledge.txt  rerank.txt  symptom_elicitation.txt
docs/: FIX_PLAN.md  FIX_REPORT.md
scripts/: ingest_medical.py
src/api/: app.py
src/core/: eval_runner.py  evaluator.py  gate.py  logging.py  settings.py  trace.py  types.py
src/dashboard/: app.py
src/ingestion/: pipeline.py
src/observability/: logger.py
tests/: conftest.py
tests/e2e/: test_booking_flow.py  test_dashboard_smoke.py  test_data_ingestion.py  test_emergency_intercept.py  test_follow_up.py  test_full_consultation.py  test_privacy_isolation.py
tests/fixtures/: red_team_test_set.json
tests/integration/: conftest.py  test_booking_concurrency.py  test_ingestion_pipeline.py
tests/unit/: test_agent.py  test_api.py  test_batch_processor.py  test_bm25_indexer.py  test_booking_service.py  test_case_generator.py  test_chunk_refiner.py  test_config_loading.py  test_core_types.py  test_dense_encoder.py  test_embedding_factory.py  test_evaluator.py  test_file_integrity.py  test_his_factory.py  test_his_services.py  test_image_captioner.py  test_image_storage.py  test_ingestion_pipeline.py  test_llm_factory.py  test_medical_chunker.py  test_memory_factory.py  test_metadata_enricher.py  test_rag_engine.py  test_red_team.py  test_reranker_factory.py  (+8 more)
(+84 files in other folders)
